--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <style>
 
         </style>
-        <script src="script.js">
+        <script src="My-Music/script.js">
 
         </script>
     </body>
